--- a/interview.html
+++ b/interview.html
@@ -387,7 +387,7 @@
             <a href="veracity.html" class="back-btn"><span>←</span> BACK TO VERACITY</a>
             <div class="header-title">
                 <h1>TRACK B: INTERVIEW</h1>
-                <div class="subtitle">SOCRATIC EXPLORATION MODE</div>
+                <div class="subtitle">CONVERSATION MODE</div>
             </div>
         </div>
         <div class="header-right">
@@ -405,7 +405,7 @@
             <div class="chat-header">
                 <div class="chat-header-left">
                     <div class="chat-icon">🎯</div>
-                    <span class="chat-title">SOCRATIC DIALOGUE</span>
+                    <span class="chat-title">TRACK-B CONVERSATION</span>
                 </div>
                 <span class="chat-mode">POWERED BY CLAUDE</span>
             </div>
