--- a/index.html
+++ b/index.html
@@ -1694,14 +1694,10 @@
         <button class="modal-close" onclick="closeOurStoryVideoModal()" aria-label="Close">×</button>
       </div>
       <div class="modal-body" style="background: #000;">
-        <video id="ourStoryVideo" controls preload="metadata">
+        <video id="ourStoryVideo" controls preload="auto">
           <source src="Our_Story-2026.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
-      </div>
-      <div class="modal-footer">
-        <p class="footer-text">How America Can Win the New Civil War</p>
-        <a href="Our_Story-2026.mp4" download class="download-btn">⬇️ Download Video</a>
       </div>
     </div>
   </div>
@@ -1811,10 +1807,15 @@
     // ===== OUR STORY VIDEO MODAL =====
     function openOurStoryVideoModal() {
       const modal = document.getElementById('ourStoryVideoModal');
+      const video = document.getElementById('ourStoryVideo');
       
       modal.classList.add('active');
       setTimeout(() => modal.classList.add('visible'), 10);
       document.body.style.overflow = 'hidden';
+      
+      // Autoplay the video when modal opens
+      video.currentTime = 0;
+      video.play();
     }
 
     function closeOurStoryVideoModal() {
