--- a/assess.html
+++ b/assess.html
@@ -4968,6 +4968,11 @@ Example: 'The Earth is approximately 4.5 billion years old'" oninput="updateChar
                 <h2><span>📊</span> Side-by-Side Assessment Comparison</h2>
                 <button class="compare-modal-close" onclick="closeCompareModal()">&times;</button>
             </div>
+            <div style="background: rgba(13, 148, 136, 0.1); border-left: 3px solid var(--accent-teal); padding: 12px 20px; margin: 0 20px 20px 20px; border-radius: 6px;">
+                <p style="margin: 0; font-size: 0.85rem; color: var(--text-secondary); line-height: 1.5;">
+                    <strong style="color: var(--accent-teal);">Note on Factor Selection:</strong> The Initial Assessment uses <em>dynamic factor selection</em> (choosing 3-6 relevant factors tailored to this specific question), while the Verification Assessment uses a <em>standardized 4-factor framework</em> (Evidence Quality 40%, Epistemological Soundness 30%, Source Reliability 20%, Logical Coherence 10%). This intentional difference provides complementary perspectives on the same claim.
+                </p>
+            </div>
             <div class="compare-modal-body">
                 <!-- Initial Assessment Column -->
                 <div class="compare-column initial">
