--- a/assess.html
+++ b/assess.html
@@ -2328,10 +2328,10 @@
                 <div class="tagline">Truth Through Transparency</div>
             </div>
             <div style="display: flex; align-items: center; gap: 16px;">
-                <a href="/" class="home-btn" style="display: flex; align-items: center; gap: 6px; padding: 6px 14px; background: var(--bg-tertiary); border: 1px solid var(--border-medium); border-radius: 20px; color: var(--text-secondary); text-decoration: none; font-size: 0.8rem; transition: all 0.2s ease;" onmouseover="this.style.borderColor='var(--accent-teal)'; this.style.color='var(--text-primary)';" onmouseout="this.style.borderColor='var(--border-medium)'; this.style.color='var(--text-secondary)';">
+                <a href="veracity.html" class="home-btn" style="display: flex; align-items: center; gap: 6px; padding: 6px 14px; background: var(--bg-tertiary); border: 1px solid var(--border-medium); border-radius: 20px; color: var(--text-secondary); text-decoration: none; font-size: 0.8rem; transition: all 0.2s ease;" onmouseover="this.style.borderColor='var(--accent-teal)'; this.style.color='var(--text-primary)';" onmouseout="this.style.borderColor='var(--border-medium)'; this.style.color='var(--text-secondary)';">
                     <span style="font-size: 1rem;">🏠</span> Home
                 </a>
-                <div class="version-badge">v4.2 — Track A</div>
+                <div class="version-badge">v5.0 — Track A</div>
             </div>
         </div>
     </header>
@@ -4967,11 +4967,6 @@ Example: 'The Earth is approximately 4.5 billion years old'" oninput="updateChar
             <div class="compare-modal-header">
                 <h2><span>📊</span> Side-by-Side Assessment Comparison</h2>
                 <button class="compare-modal-close" onclick="closeCompareModal()">&times;</button>
-            </div>
-            <div style="background: rgba(13, 148, 136, 0.1); border-left: 3px solid var(--accent-teal); padding: 12px 20px; margin: 0 20px 20px 20px; border-radius: 6px;">
-                <p style="margin: 0; font-size: 0.85rem; color: var(--text-secondary); line-height: 1.5;">
-                    <strong style="color: var(--accent-teal);">Note on Factor Selection:</strong> The Initial Assessment uses <em>dynamic factor selection</em> (choosing 3-6 relevant factors tailored to this specific question), while the Verification Assessment uses a <em>standardized 4-factor framework</em> (Evidence Quality 40%, Epistemological Soundness 30%, Source Reliability 20%, Logical Coherence 10%). This intentional difference provides complementary perspectives on the same claim.
-                </p>
             </div>
             <div class="compare-modal-body">
                 <!-- Initial Assessment Column -->
