--- a/documentation.html
+++ b/documentation.html
@@ -827,7 +827,7 @@
           <div class="doc-status">✓ Live & Continuously Updated</div>
           
           <ul class="feature-list">
-            <li><strong>Dual Scoring System:</strong> Reality Score (-10 to +10) measures factual accuracy; Integrity Score (-1.0 to +1.0) measures source honesty</li>
+            <li><strong>Dual Profile System:</strong> Reality Profile (-10 to +10) measures factual accuracy; Integrity Profile (-1.0 to +1.0) measures source honesty</li>
             <li><strong>Two Modes:</strong> Ask any question OR paste an article for assessment</li>
             <li><strong>Warning Flags:</strong> Visual alerts when manipulation patterns are detected—even when facts are true</li>
             <li><strong>Always Current:</strong> Online deployment means you always have the latest version with newest features</li>
