--- a/index.html
+++ b/index.html
@@ -1507,7 +1507,7 @@
         <div class="step">
           <div class="step-number">2</div>
           <h3>Expert Validators Review (In Development)</h3>
-          <p>Credentialed experts analyze claims using transparent methodology and provide confidence scores.</p>
+          <p>Credentialed experts analyze claims using transparent methodology and provide confidence profiles.</p>
         </div>
         
         <div class="step">
