--- a/VERITAS_Web_Package/VERITAS_Interactive_Demo_Web.html
+++ b/VERITAS_Web_Package/VERITAS_Interactive_Demo_Web.html
@@ -4251,7 +4251,7 @@
             <div class="section">
                 <div class="section-title">Why Not Lower Than +2?</div>
                 <div class="section-content">
-                    <p>This gets +2 rather than a negative score because:</p>
+                    <p>This gets +2 rather than a negative value because:</p>
                     <ul>
                         <li>The underlying facts are real and documented</li>
                         <li>The database methodology is transparent (cases are linked to sources)</li>
@@ -4923,7 +4923,7 @@
             </div>
 
             <div class="section">
-                <div class="section-title">Why This Confidence Score?</div>
+                <div class="section-title">Why This Confidence Profile?</div>
                 <div class="section-content">
                     <p><strong>The SOC-8 merits high confidence (+8) because:</strong></p>
 
@@ -5110,7 +5110,7 @@
             </div>
 
             <div class="section">
-                <div class="section-title">Why This Confidence Score?</div>
+                <div class="section-title">Why This Confidence Profile?</div>
                 <div class="section-content">
                     <p><strong>The article merits moderate confidence (+4) because:</strong></p>
 
@@ -5304,7 +5304,7 @@
             </div>
 
             <div class="section">
-                <div class="section-title">Why This Confidence Score?</div>
+                <div class="section-title">Why This Confidence Profile?</div>
                 <div class="section-content">
                     <p><strong>The article merits low confidence (-6) because:</strong></p>
 
@@ -5502,7 +5502,7 @@
         <div class="assessment-summary">
             <div class="current-score">
                 <div class="score-value" id="mobileCurrentScore">+7</div>
-                <div class="score-label">Current Article Score</div>
+                <div class="score-label">Current Article Profile</div>
             </div>
         </div>
         <div class="article-list" id="mobileArticleList">
