--- a/assess.html
+++ b/assess.html
@@ -2990,7 +2990,7 @@ Example: 'The Earth is approximately 4.5 billion years old'" oninput="updateChar
             
             // Call the Plain Truth API for Claude-generated content
             var currentLanguage = localStorage.getItem('veritasLanguage') || 'en';
-            var originalQuestion = document.getElementById('claimInput').value.trim() || 
+            var originalQuestion = document.getElementById('question').value.trim() || 
                                    document.getElementById('articleUrl').value.trim() ||
                                    'the claim being assessed';
             
